# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: default.conf
objs/: .gitignore
srcs/: AHttpMessage.cpp  AHttpMessage.hpp  Cgi.cpp  Cgi.hpp  Config.cpp  Config.hpp  Connection.cpp  Connection.hpp  Daemon.cpp  Daemon.hpp  Events.cpp  Events.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  IDirective.hpp  IEventSubscriber.hpp  Location.cpp  Location.hpp  MimeType.cpp  MimeType.hpp  Print.hpp  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp  main.cpp
srcs/utils/: FileStats.cpp  FileStats.hpp  MimeType.cpp  Path.cpp  Path.hpp  Print.cpp  Print.hpp
www/: index.html
www/php/: index.php  test.php
www/python/: index.py
www/static/: 404.html  catalog.html  contacts.html  index.html  style.css
www/tester/YoupiBanane/: youpi.bad_extension  youpi.bla
www/tester/YoupiBanane/nop/: youpi.bad_extension
